--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div id="player_registry">
       <p>input your name</p>
       <label for="player_name"><input type="text" id="player_name"></label>
+      <p>PRESET YOUR METAMASK TO EARN TOKEN</p>
+      <label for="player_account"><input type="text" id="player_account"></label>
+      <br>
       <button id="submit_player">submit</button>
     </div>
   </section>
@@ -23,9 +26,10 @@
     <div class="copyright">(c) Copyright 2018 Chan Po Yu</div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/GsToken.js"></script>
   <script src="js/function.js"></script>
-  <script src="js/item.js"></script>
 
 </body>
 </html>
