--- a/shop.html
+++ b/shop.html
@@ -21,27 +21,27 @@
       <div class="item_display_box">
         <div id="item1_display">
           <p class="item_description">Junk Foodの力で一気に元気が出る</p>
-          <p class="item_effect">HP100回復</p>
+          <p class="item_effect">HP100回復 $0.05 GT</p>
           <img src="img/Hp_recov.png" alt="HP_re_display" height="350">
           </div>
           <div id="item2_display">
             <p class="item_description">斧で攻撃力を増強する</p>
-            <p class="item_effect">3回攻撃ATK50アップ</p>
+            <p class="item_effect">3回攻撃ATK50アップ $0.1 GT</p>
             <img src="img/axe.png" alt="ATK_en_display" height="350">
           </div>
           <div id="item3_display">
             <p class="item_description">大好きな骨で防御する</p>
-            <p class="item_effect">3回防御DEF50アップ</p>
+            <p class="item_effect">3回防御DEF50アップ $0.1 GT</p>
             <img src="img/bone_large.png" alt="ATK_en_display" height="350">
           </div>
           <div id="item4_display">
             <p class="item_description">ピザを食べたら動きが素早くなる</p>
-            <p class="item_effect">3回攻撃SPDx2</p>
+            <p class="item_effect">3回攻撃SPDx2 $0.1 GT</p>
             <img src="img/pizza.gif" alt="ATK_en_display" height="350">
           </div>
           <div id="item5_display">
             <p class="item_description">宇宙の力を吸収して放つ</p>
-            <p class="item_effect">３回攻撃SKLを大幅にあげる</p>
+            <p class="item_effect">３回攻撃SKLを大幅にあげる $0.2 GT</p>
             <img src="img/galaxy_ball.png" alt="ATK_en_display" height="350">
           </div>
         </div>
@@ -76,6 +76,8 @@
   </section>
   <footer><div class="copyright">(c) Copyright 2018 Chan Po Yu</div></footer>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
+  <script src="js/GsToken.js"></script>
   <script src="js/function.js"></script>
   <script src="js/item.js"></script>
 
