--- a/stage_3.html
+++ b/stage_3.html
@@ -93,6 +93,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="js/function.js"></script>
   <script src="js/item.js"></script>
+  <script src="js/GsToken.js"></script>
   <script src="js/character.js"></script>
   <script src="js/main.js"></script>
 </section>
